--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "scripts": {
     "dev": "ts-node src/index.ts",
     "watch": "ts-node-dev src/index.ts",
-    "build": "tsc",
-    "prod": "node ."
+    "start": "node .",
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist"
   },
   "repository": {
     "type": "git",
@@ -30,9 +32,16 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.11.19",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5"
-  }
+  },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+]
 }
