--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,14 @@
   "builds": [
     {
       "src": "dist/index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["dist/**"] }
     }
   ],
   "routes": [
     {
-      "src": "dist/(.*)",
-      "dest": "/"
+      "src": "/(.*)",
+      "dest": "dist/index.js"
     }
   ]
 }
